force-app/main/default/objects/RedsysDatosLlamada__c/RedsysDatosLlamada__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Redsys_DatosLlamada</label>
</CustomObject>