force-app/main/default/objects/RedsysDatosLlamada__c/fields/ClaveCifrado__c.field-meta.xml
<CustomField>
    <fullName>ClaveCifrado__c</fullName>
    <description>Clave secreta utilizada para el cifrado a Redsys</description>
    <label>Clave Secreta Cifrado</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>