force-app/main/default/objects/RedsysDatosLlamada__c/fields/Datocomercio__c.field-meta.xml
<CustomField>
    <fullName>Datocomercio__c</fullName>
    <description>Campo correspondiente a DS_MERCHANTDATA en la llamada a Redsys</description>
    <label>Dato del comercio</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>