force-app/main/default/objects/RedsysDatosLlamada__c/fields/FUC__c.field-meta.xml
<CustomField>
    <fullName>FUC__c</fullName>
    <description>Número de comercio correspondiente a Arriaga</description>
    <label>Número de comercio</label>
    <length>15</length>
    <type>Text</type>
</CustomField>