force-app/main/default/objects/RedsysDatosLlamada__c/fields/InotificacionSIS__c.field-meta.xml
<CustomField>
    <fullName>InotificacionSIS__c</fullName>
    <description>Dirección de la clase Rest que sirva para guardar los datos</description>
    <label>InotificacionSIS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>