force-app/main/default/objects/RedsysDatosLlamada__c/fields/NombreComercio__c.field-meta.xml
<CustomField>
    <fullName>NombreComercio__c</fullName>
    <description>Nombre del comercio que recebirá el pago</description>
    <label>Nombre del Comercio</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>